# icplay-dev

./: .gitignore  canister_ids.json  dfx.json  readme.md
CompareTheSize/Assets/AddressableAssetsData/: AddressableAssetSettings.asset  DefaultObject.asset
CompareTheSize/Assets/Scenes/: Entry.unity
backend_service/: package-lock.json  package.json
backend_service/src/: paySdk_bck.js  query.js
backend_service/src/config/: payConfig.json
canister_indexer/: Cargo.toml  canister_indexer.did
canister_indexer/src/: candid_generator.rs  cycles_handler.rs  data_storage.rs  initialization.rs  lib.rs  query_operations.rs  update_operations.rs
canister_platform/: Cargo.toml  canister_platform.did
canister_platform/src/: access_control.rs  candid_generator.rs  crypto_utils.rs  cycle_management.rs  data_store.rs  lib.rs  query_handlers.rs  system_init.rs  update_handlers.rs
canister_user/: Cargo.toml  canister_user.did
canister_user/src/: access_guard.rs  candid_generator.rs  cycles_ops.rs  data_store.rs  helper_utils.rs  lib.rs  payment.rs  query_api.rs  update_api.rs  user_init.rs
data-box_pycr/: Cargo.toml
data-box_pycr/src/: handler.rs  main.rs
ddcr/src/: dishout.js  paySdk.js  paySdk_bck.js  query.js  test.js
ddcr/src/config/: disConfig.json
frontend_service/: API.md  package-lock.json  vite.config.js
frontend_service/src/: main.js
frontend_service/src/api/: request.js
frontend_service/src/assets/: base.css  main.scss
frontend_service/src/canisters/: LocalStorage.js  connect.js
frontend_service/src/config/: index.js  prod.config.js
frontend_service/src/game-context/: index.js
frontend_service/src/router/: index.js
frontend_service/src/stores/: user.js
game-box/: .env.development  .eslintrc.cjs  README.md  canister_ids.json  dfx.json  index.html  package.json
game-box/public/: .ic-assets.json
game-box/src/api/: index.js
game-box/src/config/: dev.config.js
game-box_pycr/Assets/Editor/: SpineSettings.asset
game-box_pycr/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
(+97 files in other folders)
