[package]
name = "canister_platform"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = { workspace = true }
futures = { workspace = true }
ciborium = { workspace = true }
ic-cdk = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
ic-stable-structures = { workspace = true }
ic-cdk-timers = { workspace = true }
hex = { workspace = true }
canister-types = { path = "../canister_types", version = "0.1" }
getrandom = { workspace = true }
