[package]
name = "canister_user"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = { workspace = true }
ciborium = { workspace = true }
crc32fast = { workspace = true }
ic-cdk = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_bytes = { workspace = true }
sha2 = { workspace = true }
ic-stable-structures = { workspace = true }
ic-http-certification = { workspace = true }
icrc-ledger-types = { workspace = true }
ic-ledger-types = { workspace = true }
lazy_static = { workspace = true }
canister-types = { path = "../canister_types", version = "0.1" }
getrandom = { workspace = true }
